# biopython

./: .appveyor.yml  .codecov.yml  .cvsignore  .flake8  .flake8_alternative2  .flake8_alternative_1  .gitattributes  .gitignore  .landscape.yaml  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .python-version  .travis-tox.ini  .travis.yml  AGENTS.md  AUTHORS  CONTRIB  CONTRIB.rst  CONTRIBUTING  CONTRIBUTING.rst  DEPRECATED  DEPRECATED.rst  Dockerfile  LICENSE  LICENSE.rst  MANIFEST  MANIFEST.in  Makefile  NDB_database.csv  NDB_updated.xls  NEWS  NEWS.rst  Prosite.py  README  README.md  README.rst  check_ppi.py  ci-dependencies.txt  dev-requirements.txt  (+22 more)
.circleci/: config.yml  requirements-sphinx.txt
.codeboarding/: Bioinformatics Web Services & Databases.md  Biological Data I-O.md  Core Biological Data Structures.md  Graphical Visualization.md  Hidden Markov Models (HMM).md  Pathway Analysis.md  Protein Structure Analysis.md  Sequence Alignment & Phylogenetics.md  Sequence Pattern & Motif Analysis.md  Sequence Utilities & Data.md  on_boarding.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  deploy_docs.sh  ref_fix.py  requirements-rtd.txt  rst_bibitem.py  rst_chunk.py  ssh_via_deploy_key.sh
.github/workflows/: basic.yml  ci-dependencies.txt  ci.yml  style-checkers.yml
Bio/: .flake8  DBRegistry.py  DBXRef.py  Decode.py  Dispatch.py  DocSQL.py  EZRetrieve.py  Entrez.py  ExPASy.py  File.py  FilteredReader.py  Format.py  FormatIO.py  FormatRegistry.py  GenericTools.py  HotRand.py  IORegistry.py  Index.py  LogisticRegression.py  Makefile  MarkovModel.py  MarkupEditor.py  MaxEntropy.py  NaiveBayes.py  NetCatch.py  ParserSupport.py  PropertyManager.py  PubMed.py  RecordFile.py  ReseekFile.py  SGMLExtractor.py  SVM.py  Search.py  Seq.py  SeqFeature.py  SeqRecord.py  Sequence.py  Std.py  StdHandler.py  Transcribe.py  (+36 more)
Bio/Affy/: CelFile.py  CelFileV4.py  __init__.py  celmodule.cc
Bio/Ais/: XM041014.txt  __init__.py  ais_tuner.txt  example_ais2.py
Bio/Align/: AlignInfo.py  FormatConvert.py  Generic.py  Makefile  __init__.py  _aligncore.c  _aligners.c  _alignmentcounts.c  _base.py  _codonaligner.c  _pairwise.py  _pairwisealigner.c  _pairwisealigner.h  _parser.c  a2m.py  analysis.py  bam.py  bed.py  bigbed.py  bigmaf.py  bigpsl.py  cfastpairwisemodule.c  chain.py  clustal.py  emboss.py  (+20 more)
BioSQL/: .flake8  BioSeq.py  BioSeqDatabase.py  DBUtils.py  Loader.py  __init__.py
Doc/: Blast.txt  CDD.txt  Crystal.txt  ECell.txt  Enzyme.txt  Fasta.txt  FilteredReader.txt  Geo.txt  IntelliGenetics.txt  InterPro.txt  KEGG.txt  Kabat.txt  Makefile  Medline.txt  NBRF.txt  Ndb.txt  NetCatch.txt  Parser.txt  Prosite.txt  README  README.rst  References.txt  SCOP.txt  SGMLExtractor.txt  Saf.txt  SwissProt.txt  Tutorial.html  Tutorial.tex  Tutorial.txt  biopdb_faq.lyx  biopdb_faq.tex  chapter_advanced.rst  chapter_align.rst  chapter_appendix.rst  chapter_blast.rst  chapter_cluster.rst  chapter_codonalign.rst  chapter_contributing.rst  chapter_cookbook.rst  chapter_entrez.rst  (+25 more)
Martel/: ChangeLog  Dispatch.py  Expression.py  Generate.py  HISTORY  IterParser.py  Iterator.py  LAX.py  LICENSE  MANIFEST.in  Parser.py  README  RecordReader.py  TODO  Time.py  __init__.py  convert_re.py  msre_constants.py  msre_parse.py  optimize.py  setup.py  sre_constants.py  sre_parse.py
Scripts/: .flake8  BlastParser.py  ProdocParser.py  PrositeParser.py  SwissProtParser.py  git_pre_commit_hook.py  hacked_parse_mypy.py  query_pubmed.py  scop_pdb.py  testseq.py  update_ncbi_codon_table.py
Tests/: .coveragerc  .cvsignore  .flake8  BioSQL_settings.py  NCBI_qblast_testCases.py  TestSupport.py  biosql.ini.appveyor  biosql.ini.sample  br_regrtest.py  common_BioSQL.py  common_BioSQL_online.py  fuzz_PDB_PDBParser.py  fuzz_PDB_Superimposer.py  helpers.py  martel_support.py  output.best.fas  output.best.nex  pairwise2_testCases.py  requires_internet.py  requires_wise.py  run_tests.py  search_tests_common.py  seq_tests_common.py  setup_BioSQL.py  test_AFDB.py  test_Ace.py  test_Affy.py  test_AlignIO.py  test_AlignIO_ClustalIO.py  test_AlignIO_EmbossIO.py  test_AlignIO_FastaIO.py  test_AlignIO_FastaIO_unittest.py  test_AlignIO_MauveIO.py  test_AlignIO_PhylipIO.py  test_AlignIO_convert.py  test_AlignInfo.py  test_Align_Alignment.py  test_Align_Alignment_format.py  test_Align_Alignments.py  test_Align_a2m.py  (+421 more)
biopython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
egs/: egs1.ipynb
inspection/: Default.xml
(+3608 files in other folders)
